# G4ValHAD

./: README.md
test19/: BertFTFSummary_for_10_03.C  BertFTFThetaSpectraSummary_for_10_03.C  CMakeLists.txt  CMakeLists.txt-before-modconfig-changes  G4MODELS_HighEnergy.h  G4MODELS_IntermediateEnergy.h  GNUmakefile  HARPModels.C  HARPRegre.C  HARP_chi2_tables.C  History  NA49Models.C  NA49Regre.C  NA49_chi2_tables.C  NA61Evolution.C  NA61Models.C  NA61Regre.C  NA61_chi2_tables.C  PlotHARPAnalysis.C  PlotHadronProton.C  PlotNA49Analysis.C  PlotNA61Analysis.C  ReadModelConfig.C  SASM6E.C  SASM6E_chi2_tables.C  ctest19-harp.config  do_regression.sh  test19.cc  test19.cc-original  test19.harp.piminus  test19.harp.piplus  test19.harp.proton  test19.iaea.proton  test19.na49  test19.na61  test19.na61.piplus  test19.na61.proton  test19.sasm6e.kplus  test19.sasm6e.piplus  test19.sasm6e.proton
test19/batch/: copy_regression.sh  copy_results.sh  pbs_multiCore_master.sh  piplus_SASM6E_perCore.sh  proton_SASM6E_perCore.sh  slurm_master.sh  slurm_submit_lq_el8.sh  slurm_submit_nersc.sh  slurm_submit_wcic.sh  submit_all.sh  test19_run_harp_lq_el8.sh  test19_run_harp_nersc.sh  test19_run_harp_piminus.sh  test19_run_harp_piplus.sh  test19_run_harp_proton.sh  test19_run_harp_wcic.sh  test19_run_na49.sh  test19_run_na49_lq_el8.sh  test19_run_na49_nersc.sh  test19_run_na49_wcic.sh  test19_run_na61.sh  test19_run_na61_lq_el8.sh  test19_run_na61_nersc.sh  test19_run_na61_wcic.sh  test19_run_sasm6e_wcic.sh  test19_submit_all.sh
test19/g4val-upload-scripts/: HARP-metadata-template.json  NA49-proton-C-metadata-ddiff-spectra.json  NA49-proton-C-metadata-integrated-spectra.json  NA61-proton-C-metadata-kaons.json  NA61-proton-C-metadata-pions.json  SASM6E-metadata-template.json  g4upload_test19_na49_models.xml  g4upload_test19_na49_regre.xml  g4upload_test19_na61_models.xml  g4upload_test19_na61_regre.xml  gen_HARP_piminus_upload_json_specs.sh  gen_HARP_piplus_upload_json_specs.sh  gen_HARP_proton_upload_json_specs.sh  gen_NA49_upload_json_specs.sh  gen_NA61_upload_json_specs.sh  gen_SASM6E_upload_json_specs.sh  gen_upload_script_harp_models.sh  gen_upload_script_harp_regre.sh  gen_upload_script_na49_models.sh  gen_upload_script_na49_regre.sh  gen_upload_script_na61_models.sh  gen_upload_script_na61_regre.sh  gen_upload_script_na61_run2009_models.sh  gen_upload_script_na61_run2009_regre.sh  gen_upload_script_sasm6e_model.sh  gen_upload_script_sasm6e_regre.sh  gen_upload_scripts.sh  generate_upload_script_na49_models.sh  generate_upload_script_na49_regre.sh  generate_upload_script_na61_models.sh  generate_upload_script_na61_regre.sh  generate_upload_scripts.sh  test19_gen_histo_sql.C  test19_gen_histo_sql.cc
test19/include/: TestHARPHisto.hh  TestIAEAHisto.hh  TestNA49Histo.hh  TestNA61Histo.hh  TestNA61PiplusBeamHisto.hh  TestNA61ProtonBeamHisto.hh  TestSASM6EHisto.hh  TestXFPlotsHisto.hh
test19/scripts-for-signature-plots/: SignaturePlotsHARP.C  SignaturePlotsNA49.C  SignaturePlotsNA61.C
test19/src/: Test19ExecProcessLevel.cc  Test19Histo.cc  TestHARPHisto.cc  TestIAEAHisto.cc  TestNA49Histo.cc  TestNA61Histo.cc  TestNA61PiplusBeamHisto.cc  TestNA61ProtonBeamHisto.cc  TestSASM6EHisto.cc  TestXFPlots.cc
test23/: CMakeLists.txt  Chi2Analysis.C  G4PHYSLIST_HighEnergy.h  G4PHYSLIST_IntermediateEnergy.h  GNUmakefile  HARPModels.C  HARPModelsAllEnergies.C  HARPRegre.C  History  NA49Models.C  NA49Regre.C  NA61Models.C  NA61Regre.C  NA61RegreAll.C  PlotNA49Analysis.C  PlotNA61Analysis.C  ctest23-na61.config  do_analysis.sh  test23.cc
test23/batch/: piminus_HARP.sh  piminus_HARP_perCore.sh  piplus_HARP.sh  piplus_HARP_SLURM.sh  piplus_HARP_perCore.sh  proton_HARP_perCore.sh  proton_NA49.sh  proton_NA49_perCore.sh  proton_NA61.sh  sim_perCore_harp_lq_el8.sh  sim_perCore_harp_nersc.sh  sim_perCore_wcic.sh  slurm_submit_lq_el8.sh  slurm_submit_nersc.sh  slurm_submit_wcic.sh  submit_all.sh  submit_all_SLURM.sh  submit_all_g4perf.sh  submit_all_parallel.sh  test23_submit_all.sh  test23_submit_all_parallel.sh  test23_submit_nubeam_all.sh  test_proton_HARP.sh
test23/g4val-upload-scripts/: gen_NA49_upload_json_specs.sh  gen_NA61_upload_json_specs.sh  gen_upload_script_harp_models.sh  gen_upload_script_na49_regre.sh  gen_upload_script_na61_regre.sh  generate_upload_script_harp_models.sh  generate_upload_script_harp_regre.sh  generate_upload_script_na49_regre.sh  generate_upload_script_na61_regre.sh  generate_upload_scripts.sh  na49-p-H.sql
test23/include/: HadronPhysicsNuBeam.hh  NuBeam.icc  QGSPStrFragmLundProtonBuilder.hh  TestIAEAHisto.hh  Tst23HARPHisto.hh
test23/shared-py-scripts/: check_envvar.py  roothist2h5.py  test_print.py
test23/shared-root-macros/: Chi2Calc.C  Chi2CalcHARP.C  Chi2CalcNA49.C  Chi2CalcNA61.C  DrawHARPSpectra.C  DrawNA49Spectra.C  DrawNA61Spectra.C  MergeRuns.C  NA61.h  PlotHARPModels.C  PlotHARPRegre.C  PlotNA49Models.C  PlotNA61Models.C  PlotNA61Regre.C  REGRESSION_TEST.h  ReadHARPData.C  ReadNA61Data.C
test23/shared-upload-scripts/: HARPDataPiminusBeamJSONCompose.C  HARPDataProtonBeamJSONCompose.C  NA49DDiffSpectra2JSON.py  NA49DataSQLCompose.C  NA61DataPub2011JSON.C
test23/src/: HadronPhysicsNuBeam.cc  QGSPStrFragmLundProtonBuilder.cc  TestIAEAHisto.cc  Tst23Histo.cc  Tst23NA49Histo.cc  Tst23NA61Histo.cc
test47/: BertFTF_for_10_03.C  CMakeLists.txt  ConvertRootFiles.C  GNUmakefile  History  ITEPModels.C  ITEPRegre.C  ITEP_chi2_tables.C  MergeRuns.C  PlotForMu2eTalk.C  PlotITEPAnalysis.C  PlotMIPS.C  PlotPbarProdAnalysis.C  README  do_regression.sh  test47.cc  test47.piminus.itep  test47.piminus.itep.Mu2e  test47.piplus.itep  test47.piplus.itep.Mu2e  test47.proton.itep  test47.proton.itep.Mu2e  test47p.itep  test47p.pbarprod  test47pim.itep  test47pip.itep  test47pip.itep.Mu2e
test47/batch/: copy_regression.sh  copy_results.sh  pbs_multiCore_master.sh  piminus_itep_submit.sh  piplus_itep_submit.sh  proton_itep_submit.sh  slurm_master.sh  slurm_submit_lq_el8.sh  slurm_submit_wcic.sh  submit_Mu2e.sh  submit_all.sh  test47_Mu2e_piminus.sh  test47_Mu2e_piplus.sh  (+8 more)
(+403 files in other folders)
